<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrActivity">


    <ImageView
        android:id="@+id/imSelectAv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/avatar"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/edLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/avatar" />

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/imSelectAv"
        app:layout_constraintStart_toStartOf="@+id/imSelectAv"
        app:layout_constraintTop_toBottomOf="@+id/btAvatar"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickAvatar"
        android:text="@string/avatar"
        app:layout_constraintEnd_toEndOf="@+id/imSelectAv"
        app:layout_constraintStart_toStartOf="@+id/imSelectAv"
        app:layout_constraintTop_toBottomOf="@+id/imSelectAv"
        tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/edLogin"
        app:layout_constraintStart_toStartOf="@+id/edLogin"
        app:layout_constraintTop_toBottomOf="@+id/edLogin" />

    <EditText
        android:id="@+id/edNName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nick_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edPass"
        app:layout_constraintStart_toStartOf="@+id/edPass"
        app:layout_constraintTop_toBottomOf="@+id/edPass"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btDone"
        android:onClick="onClickDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@+id/edPass"
        app:layout_constraintStart_toStartOf="@+id/edPass"
        app:layout_constraintTop_toBottomOf="@+id/edNName"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>